# MRM_Anvesha

./: .gitignore
OpenCV/: Task1_Aruco.py
src/cashier_system/: CMakeLists.txt  package.xml
src/cashier_system/msg/: Bill.msg
src/cashier_system/src/: bill_generator.cpp  inventory_node.cpp  status_node.cpp
